methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:13: error: Unit does not take parameters
		dogHouse();
                        ^MethodsDogHouse:19: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:29: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:39: error: Unit does not take parameters
		dogHouse();		
                        ^